hphp/hack/test/typecheck/let/let_switch_2.php.exp
File "let_switch_2.php", line 9, characters 12-14:
Unbound name: ret (a global constant) (Naming[2049])
